kubernetes/manifests/prometheus-operator/ingressroutes/prom-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local.example.com`) # create A record in pihole
      kind: Rule
      services:
        - name: prometheus-prometheus
          port: 9090
  tls:
    secretName: local-example-com-tls # or local-example-com-staging-tls
